chat-monitor.css
/* the chat window */
.chat-room {
/* should have a black background */
  background: black !important;
}

/* the "STREAM CHAT" header above the chat */
div.stream-chat-header,
/* everything that's not the chat itself or the chat input */
/* this includes the bit/gift sub leaderboard, notifications that a user is giving away subs, hype trains, etc. */
section.chat-room > div.chat-room__content > div:not(.chat-list):not(.chat-input),
/* the "Chat paused due to scroll." type messages */
div.chat-paused-footer,
/* the scrollbars */
div.scrollable-area div.simplebar-track {
/* hide these things */
  display: none !important;
}

/* Thanks malc for the fixes to how the chat-interface looks*/
.chat-input select,
.chat-input textarea,
.chat-input button,
.chat-input input[type="text"],
.chat-input input[type="email"],
.chat-input input[type="password"],
.chat-input input[type="search"],
.chat-input {
  font-size: 2.4rem !important;
}

/* the container of messages */
.chat-scrollable-area__message-container {
  color: #eee;
  display: flex !important;
  flex-direction: column;
  justify-content: flex-start;
  padding-top: 0 !important;
}
.chat-scrollable-area__message-container.reverse {
  flex-direction: column-reverse;
  padding-bottom: 100vh !important;
}

/* do zebra-striping */
.chat-line__message.odd,
.user-notice-line.odd {
  background-color: #111 !important;
}
/* specifically normal chat messages and not chat messages embedded in notices */
.chat-scrollable-area__message-container > .chat-line__message,
/* the "Welcome to the chat room" message */
.chat-line__status,
/* Sub, Gift-Sub and Channel Point Redeem notices */
.user-notice-line {
/* pad around messages to make them nice and readable */
/* we target non-embedded messages specifically to avoid double-padding */
  padding: 3px 6px !important;
/* border between messages to improve readability */
  border-bottom: #444 solid 1px !important;
}
/* all chat messages, including those embedded in notices */
.chat-line__message,
/* the "Welcome to the chat room" message */
.chat-line__status,
/* Sub, Gift-Sub and Channel Point Redeem notices */
.user-notice-line {
/* larger text size improve readability */
  font-size: 32px !important;
  line-height: 35px !important;
}

/* clip embeds */
.chat-line__message .tw-border-radius-medium.tw-elevation-1 {
  background-color: #333 !important;
}
/* preview images */
.chat-line__message .tw-border-radius-medium.tw-elevation-1 div.chat-card__preview-img {
  width: 112px;
  height: 63px;
}
/* title */
.chat-line__message .tw-border-radius-medium.tw-elevation-1 .chat-card__title p {
  font-size: 32px !important;
  line-height: 35px !important;
  color: white;
}
/* author */
.chat-line__message .tw-border-radius-medium.tw-elevation-1 .chat-card__title + div p {
  font-size: 32px !important;
  line-height: 35px !important;
  color: #bbb !important;
}

/* mentions in messages */
span.mention-fragment {
  background-color: transparent !important;
  padding: 0;
}
/* mentions where we're the recipient */
span.mention-fragment.mention-fragment--recipient {
  color: inherit;
}

.special-message {
  background-color: inherit !important;
}
.system-msg {
  background-color: inherit !important;
}

/* badges */
.chat-badge {
  display: none !important;
}

img {
  max-width: 100%;
  max-height: 50vh;
}
/* TODO: no whisper tested yet */
.chat-messages .whisper-line.whisper-incoming {
  background-color: #3b010e !important;
}

/* links */
a {
  color: inherit !important;
}

/* usernames (incl. localised) */
.chat-author__display-name,
.chat-author__intl-login {
  color: green !important;
  font-weight: 700;
}

span[data-a-target="chat-message-text"],
img.chat-image {
  color: white !important;
  font-weight: 300 !important;
}
/* deleted messages */
span.chat-line__message--deleted-notice {
  opacity: 0.2;
}
.mentioned {
  color: inherit;
  background-color: inherit;
}

/* twitch really tries to push emotes down and we don't want that */
div.chat-line__message--emote-button,
div.chat-image__container,
img.chat-image.chat-line__message--emote {
  margin: 0;
  vertical-align: baseline;
}

/* Clean up notices */
/* remove star from sub announcements */
.user-notice-line div.tw-c-text-alt-2 {
  display: none !important;
}
/* the chatter who subscribed */
.user-notice-line div.tw-mg-l-05 > p > .tw-block {
/* their name should be on the same line as their message */
  display: inline !important;
}
/* the notice text part of the sub notice */
.user-notice-line div.tw-mg-l-05 {
/* don't indent the text in */
  margin-left: 0 !important;
/* but do space it from the message */
  margin-bottom: 3px !important;
}
/* sub messages have a class-less paragraph, which forces small text again */
.user-notice-line div.tw-mg-l-05 > p,
/* converted subs have yet another p element that breaks it yet again */
.user-notice-line div.tw-mg-l-05 > p p.tw-c-text-link {
  font-size: 32px !important;
  line-height: 35px !important;
}
/* the message attached to the sub notice */
.user-notice-line div.tw-mg-t-05 {
/* the spacing from the notice is performed in the notice instead */
  margin-top: 0 !important;
}
/* Sub and Gift-Sub notices have a grey background that we don't want */
div.tw-c-background-alt {
  background-color: unset !important;
}
/* Sub, Gift-Sub and Channel Point Redeem notices */
/* very specific to avoid margin being overwritten */
.tw-mg-y-05.tw-pd-r-2.tw-pd-y-05.user-notice-line {
/* remove left highlight border */
  border-left: none;
/* remove margins - our messages are already nicely spaced */
  margin: 0 !important;
}

#settings-wheel {
  position: absolute;
  right: 5px;
  top: 5px;
  color: rgba(255, 255, 255, 0.3);
  cursor: pointer;
  z-index: 50;
}
#settings-wheel:hover {
  color: rgba(255, 255, 255, 1);
}

.sticky-message {
  display: none !important;
}
.chat-messages {
  top: 0px !important;
}
#hide {
  z-index: 99;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: black;
  font-size: 32px;
  font-weight: bold;
  text-align: center;
  padding-top: 200px;
  display: none;
}

